# file-parser

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: tests.yml
src/file_calculation_parser/: reader.py
tests/: test_reader.py
